[package]
name = "thurgood"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json"]
json = ["serde_json", "serde"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2.14"
thiserror = "1.0"
serde = { version = "1.0", optional = true }
serde_json = { version = "^1.0", optional = true }
base64 = { version = "0.13" }
indexmap = { version = "1.7" }
