[package]
name = "thurgood"
version = "0.2.0"
edition = "2018"
description = "Full (de)serialization support for Ruby's Marshal format"
authors = ["Binder News"]
readme = "README.md"
homepage = "https://github.com/bindernews/thurgood"
repository = "https://github.com/bindernews/thurgood"
license = "MIT OR Apache-2.0"
keywords = ["ruby", "marshal", "serialization"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["json"]
json = ["serde_json", "serde"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
thiserror = "1.0"
serde = { version = "1.0", optional = true }
serde_json = { version = "^1.0", optional = true }
base64 = { version = "0.13" }
indexmap = { version = "1.7" }
